[tool.poetry]
name = "mkreports"
version = "0.3.1"
description = "Creating static reports from python using mkdocs"
authors = ["Holger Hoefling <hhoeflin@gmail.com>"]
license = "MIT"
homepage = "https://github.com/hhoeflin/mkreports"
repository = "https://github.com/hhoeflin/mkreports"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
mkdocs = ">=1.2.3"
mkdocs-material = ">=7.3.6"
mdutils = ">=1.3.1"
PyYAML = ">=6.0"
immutabledict = ">=2.2.1"
typing-extensions = "<=3.11"
pytest = ">=6.2.5"
tabulate = ">=0.8.9"
deepmerge = ">=0.3.0"
python-frontmatter = ">=1.0.0"
anytree = "^2.8.0"
intervaltree = "^3.1.0"
more-itertools = "^8.12.0"
plotly = "^5.5.0"
typer = "^0.4.0"
mkdocstrings = {version = "^0.17.0", python = "^3.7"}
GitPython = "^3.1.26"
parse = "^1.19.0"

[tool.poetry.dev-dependencies]
pudb = ">=2021.2.2"
bpython = ">=0.22.1"
pytest = ">=6.2.5"
pytest-pudb = ">=0.7.0"
plotnine = ">=0.8.0"
matplotlib = ">=3.4.3"
seaborn = ">=0.11.2"
altair = "^4.1.0"
ipython = "^7.30.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.pyright]
include = ["mkreports"]
